--- a/index.html
+++ b/index.html
@@ -5,46 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin Fashion</title>
-    <!-- bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Tailwind css -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- regular css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="container first-part-bg">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid justify-content-between">
-              <a class="navbar-brand" href="#">
-                  <img src="images/logo.png" width="191px" height="40px" alt="">
-              </a>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">Pricing</a>
-                  <a class="nav-link" href="#">Disabled</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </section>
-    <!-- after navbar -->
-    <section class="container first-part-bg">
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <h1 class="be-penguin"><span>BE THE PENGUINS</span> OF WINTER</h1>
-                <p class="penguin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem vitae porro ipsa! Beatae!</p>
-                <a class="buy-now" href="">
-                    <img src="icons/shopping-cart 1.png" alt="">
-                    <p class="buy-now-text">buy now</p>
-                </a>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <img src="images/model.png" alt="">
-            </div>
-        </div>
-    </section>
-    <!-- js bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
 </body>
 </html>
